--- a/src/styles.css
+++ b/src/styles.css
@@ -69,12 +69,19 @@ header{
 .error {
     width: 250px;
     padding: 5px 15px;
-    border: solid 1px;
+    border: solid 3px red;
     border-radius: 15px;
     display: flex;
     flex-direction: column;
     margin: 5px 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 100;
 }
+
+
 
 .error__header {
     display: flex;
